Rename forum_common.js to ss_common.js